// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryReportSummarySection BaseSummarySection: failure only 1`] = `
<div
  className="summary-report-summary-section"
>
  <React.Fragment>
    <h2>
      URLs
    </h2>
    2
     total URLs discovered
  </React.Fragment>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "unscannable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 2,
        "pass": 0,
        "unscannable": 0,
      }
    }
    textLabel={true}
  />
  <div
    className="failure-instances"
  >
    <h2>
      Failure Instances
    </h2>
    <OutcomeChip
      count={3}
      outcomeType="fail"
    />
     Failure instances were detected
  </div>
</div>
`;

exports[`SummaryReportSummarySection BaseSummarySection: failures + passes only 1`] = `
<div
  className="summary-report-summary-section"
>
  <React.Fragment>
    <h2>
      URLs
    </h2>
    4
     total URLs discovered
  </React.Fragment>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "unscannable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 2,
        "pass": 2,
        "unscannable": 0,
      }
    }
    textLabel={true}
  />
  <div
    className="failure-instances"
  >
    <h2>
      Failure Instances
    </h2>
    <OutcomeChip
      count={3}
      outcomeType="fail"
    />
     Failure instances were detected
  </div>
</div>
`;

exports[`SummaryReportSummarySection BaseSummarySection: failures + unscannable + passes 1`] = `
<div
  className="summary-report-summary-section"
>
  <React.Fragment>
    <h2>
      URLs
    </h2>
    7
     total URLs discovered
  </React.Fragment>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "unscannable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 2,
        "pass": 2,
        "unscannable": 3,
      }
    }
    textLabel={true}
  />
  <div
    className="failure-instances"
  >
    <h2>
      Failure Instances
    </h2>
    <OutcomeChip
      count={3}
      outcomeType="fail"
    />
     Failure instances were detected
  </div>
</div>
`;

exports[`SummaryReportSummarySection BaseSummarySection: failures + unscannable only 1`] = `
<div
  className="summary-report-summary-section"
>
  <React.Fragment>
    <h2>
      URLs
    </h2>
    5
     total URLs discovered
  </React.Fragment>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "unscannable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 2,
        "pass": 0,
        "unscannable": 3,
      }
    }
    textLabel={true}
  />
  <div
    className="failure-instances"
  >
    <h2>
      Failure Instances
    </h2>
    <OutcomeChip
      count={3}
      outcomeType="fail"
    />
     Failure instances were detected
  </div>
</div>
`;

exports[`SummaryReportSummarySection BaseSummarySection: passes only 1`] = `
<div
  className="summary-report-summary-section"
>
  <React.Fragment>
    <h2>
      URLs
    </h2>
    2
     total URLs discovered
  </React.Fragment>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "unscannable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 0,
        "pass": 2,
        "unscannable": 0,
      }
    }
    textLabel={true}
  />
  <div
    className="failure-instances"
  >
    <h2>
      Failure Instances
    </h2>
    <OutcomeChip
      count={0}
      outcomeType="fail"
    />
     Failure instances were detected
  </div>
</div>
`;

exports[`SummaryReportSummarySection BaseSummarySection: unscannable + passes only 1`] = `
<div
  className="summary-report-summary-section"
>
  <React.Fragment>
    <h2>
      URLs
    </h2>
    5
     total URLs discovered
  </React.Fragment>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "unscannable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 0,
        "pass": 2,
        "unscannable": 3,
      }
    }
    textLabel={true}
  />
  <div
    className="failure-instances"
  >
    <h2>
      Failure Instances
    </h2>
    <OutcomeChip
      count={0}
      outcomeType="fail"
    />
     Failure instances were detected
  </div>
</div>
`;

exports[`SummaryReportSummarySection BaseSummarySection: unscannable only 1`] = `
<div
  className="summary-report-summary-section"
>
  <React.Fragment>
    <h2>
      URLs
    </h2>
    3
     total URLs discovered
  </React.Fragment>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "unscannable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 0,
        "pass": 0,
        "unscannable": 3,
      }
    }
    textLabel={true}
  />
  <div
    className="failure-instances"
  >
    <h2>
      Failure Instances
    </h2>
    <OutcomeChip
      count={0}
      outcomeType="fail"
    />
     Failure instances were detected
  </div>
</div>
`;
